%% Class Diagram — Domain Model
%% Bounded context: Student Management. Modules: academic, library.
%% ---
%% Reading rules:
%%   solid line  = association INSIDE one aggregate (none exist here — every
%%                 aggregate is a single object)
%%   dashed ..>  = reference to ANOTHER aggregate, BY IDENTITY ONLY
%% No aggregation (o--) or composition (*--) crosses an aggregate boundary.

classDiagram
  direction LR

  %% ===========================================================================
  %% Module: academic
  %% ===========================================================================

  class Student {
    <<AggregateRoot>>
    +StudentId id
    +StudentCode studentCode
    +String firstName
    +String lastName
    +Email email
    +LocalDate dateOfBirth
    +Instant createdAt
    +Instant updatedAt
    +rename(String first, String last)
    +changeEmail(Email email)
  }

  class Course {
    <<AggregateRoot>>
    +CourseId id
    +CourseCode courseCode
    +String name
    +String description
    +Integer credits
    +Instant createdAt
    +Instant updatedAt
    +changeCredits(Integer credits)
  }

  class Enrollment {
    <<AggregateRoot>>
    +StudentId studentId
    +CourseId courseId
    +Instant enrolledAt
    +static Enrollment open(StudentId, CourseId)
  }

  %% ===========================================================================
  %% Module: library
  %% ===========================================================================

  class Book {
    <<AggregateRoot>>
    +BookId id
    +ISBN isbn
    +String title
    +String author
    +LocalDate publishedDate
    +StudentId ownerId
    +Instant createdAt
    +Instant updatedAt
    +assignTo(StudentId newOwner)
    +release()
    +boolean isOwned()
  }

  %% ===========================================================================
  %% Value objects — identity
  %% ===========================================================================

  class StudentId {
    <<ValueObject>>
    +Long value
  }
  class CourseId {
    <<ValueObject>>
    +Long value
  }
  class BookId {
    <<ValueObject>>
    +Long value
  }

  %% ===========================================================================
  %% Value objects — business
  %% ===========================================================================

  class StudentCode {
    <<ValueObject>>
    +String value
    +static StudentCode of(String raw)
  }
  class CourseCode {
    <<ValueObject>>
    +String value
    +static CourseCode of(String raw)
  }
  class ISBN {
    <<ValueObject>>
    +String value
    +static ISBN of(String raw)
  }
  class Email {
    <<ValueObject>>
    +String value
    +static Email of(String raw)
  }

  %% ===========================================================================
  %% Repositories — one per aggregate root
  %% ===========================================================================

  class StudentRepository {
    <<Repository>>
    +Optional~Student~ findById(StudentId)
    +boolean existsById(StudentId)
    +boolean existsByStudentCode(StudentCode)
    +boolean existsByEmail(Email)
    +Page~Student~ search(String query, Pageable)
    +Student save(Student)
    +void deleteById(StudentId)
  }

  class CourseRepository {
    <<Repository>>
    +Optional~Course~ findById(CourseId)
    +boolean existsById(CourseId)
    +boolean existsByCourseCode(CourseCode)
    +Page~Course~ search(String query, Pageable)
    +Course save(Course)
    +void deleteById(CourseId)
  }

  class BookRepository {
    <<Repository>>
    +Optional~Book~ findById(BookId)
    +boolean existsByIsbn(ISBN)
    +List~Book~ findByOwnerId(StudentId)
    +Page~Book~ search(String query, Pageable)
    +Book save(Book)
    +void deleteById(BookId)
  }

  class EnrollmentRepository {
    <<Repository>>
    +boolean exists(StudentId, CourseId)
    +Optional~Enrollment~ find(StudentId, CourseId)
    +List~Enrollment~ findByStudentId(StudentId)
    +List~Enrollment~ findByCourseId(CourseId)
    +Enrollment save(Enrollment)
    +void delete(StudentId, CourseId)
    +void deleteByStudentId(StudentId)
    +void deleteByCourseId(CourseId)
  }

  %% ===========================================================================
  %% Domain services / policies
  %% ===========================================================================

  class OwnershipPolicy {
    <<DomainService>>
    +void assertAssignable(Book book, StudentId candidate)
    +void assertOwnedBy(Book book, StudentId owner)
  }

  class EnrollmentPolicy {
    <<DomainService>>
    +void assertNotEnrolled(StudentId, CourseId)
    +void assertEnrolled(StudentId, CourseId)
  }

  %% ===========================================================================
  %% Domain exceptions  (req.md §12 — mapped to HTTP by the api layer)
  %% ===========================================================================

  class DomainException {
    <<abstract>>
    +String code
    +String message
  }
  class ResourceNotFoundException {
    <<DomainException>>
  }
  class DuplicateResourceException {
    <<DomainException>>
  }
  class InvalidRelationshipException {
    <<DomainException>>
  }

  DomainException <|-- ResourceNotFoundException
  DomainException <|-- DuplicateResourceException
  DomainException <|-- InvalidRelationshipException

  %% ===========================================================================
  %% Aggregate -> value object composition (INSIDE the aggregate — allowed)
  %% ===========================================================================

  Student *-- StudentId
  Student *-- StudentCode
  Student *-- Email
  Course *-- CourseId
  Course *-- CourseCode
  Book *-- BookId
  Book *-- ISBN

  %% ===========================================================================
  %% Cross-aggregate references — IDENTITY ONLY (dashed)
  %% ===========================================================================

  Book ..> StudentId : ownerId (nullable)
  Enrollment ..> StudentId : studentId
  Enrollment ..> CourseId : courseId

  %% ===========================================================================
  %% Repository / policy wiring
  %% ===========================================================================

  StudentRepository ..> Student
  CourseRepository ..> Course
  BookRepository ..> Book
  EnrollmentRepository ..> Enrollment
  OwnershipPolicy ..> BookRepository
  OwnershipPolicy ..> StudentRepository
  EnrollmentPolicy ..> EnrollmentRepository

  %% ===========================================================================
  %% Invariants
  %% ===========================================================================

  note for StudentCode "format: ^STU[0-9]{3,}$ — unique across Students (409 on duplicate)"
  note for Email "RFC-5322 shape, @Email — unique across Students (409 on duplicate)"
  note for CourseCode "format: ^[A-Z]{2,4}[0-9]{3}$ — unique across Courses (409 on duplicate)"
  note for ISBN "10 or 13 digits — unique across Books (409 on duplicate)"
  note for Course "credits must be positive (@Positive)"
  note for Enrollment "identity IS (studentId, courseId) — composite key.\nUniqueness of the pair is the no-duplicate-enrolment invariant,\nenforced by EnrollmentPolicy and by a DB unique constraint."
  note for Book "single-owner invariant: ownerId is 0..1.\nassignTo() on an already-owned book throws InvalidRelationshipException (409).\nrelease() is idempotent at the aggregate level."
  note for Student "deleting a Student does NOT cascade to Books.\nOwned books are released (ownerId := null) by\nStudentApplicationService before the Student row is removed."

%% =============================================================================
%% OUT OF SCOPE for this diagram
%% =============================================================================
%% DTOs / transport models (StudentCreateRequest, BookResponse, PageMetadata,
%% ErrorResponse, ...) live in the api layer and are specified by
%% docs/api-contract/. They are deliberately absent here so the domain model
%% stays free of transport concerns. See diagram/architecture/package-map.mmd
%% for how the layers connect.
%% ---
%% Pageable / Page above are Spring Data types appearing in repository
%% signatures only; they never enter an aggregate.
